fix valign

--- a/website/css/fxs_screen.css
+++ b/website/css/fxs_screen.css
@@ -4116,6 +4116,7 @@ fieldset[disabled] .fxs_dismissQuery {
 }
 .fxs_typeaheadList .fxs_typeaheadTxt {
   display: inline-block;
+  vertical-align: top;
 }
 .fxs_footer {
   position: absolute;
