--- a/website/css/less/templating.less
+++ b/website/css/less/templating.less
@@ -685,7 +685,10 @@
   }
   // Extra styles
   strong { background-color: @light_3_clr; }
-  .fxs_typeaheadTxt { display: inline-block; }
+  .fxs_typeaheadTxt {
+    display: inline-block;
+    vertical-align: top;
+  }
 }
 
 ////////////////////////////////////////////
